test in starbucks

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,4 +4,10 @@
 .bshit {
   background-color: #003300; }
 
+.cshit {
+  background-color: #003300; }
+
+.dshit {
+  background-color: #003300; }
+
 /*# sourceMappingURL=app.css.map */
