--- a/public/css/sys-css.css
+++ b/public/css/sys-css.css
@@ -21,9 +21,9 @@ a:hover{ color:Red; text-decoration:underline;}
 
 
 
-.icon{padding:2px 9px; background:url(../images/tabicons.png) no-repeat center; }
+.icon{padding:2px 9px; background:url(../images/tabicons.png) no-repeat; }
 .icon-sys{ background:url(../images/directory.png) no-repeat;}
-.icon-add1{background-position: -19px 0px;}
+.icon-add{background-position: -19px 0px;}
 .icon-nav{background-position: -100px -18px;}
 .icon-users{background-position: -100px -480px;}
 .icon-role{background-position: -360px -200px;}
