push add for homer

--- a/public/views/sys-model/sys-addmodel.html
+++ b/public/views/sys-model/sys-addmodel.html
@@ -144,9 +144,8 @@
                                         <label class="control-label col-md-3">模块顺序 <span class="required">
 													* </span>
                                         </label>
-
                                         <div class="col-md-4">
-                                            <input type="text" class="form-control" name="modeclsx"/>
+                                            <input type="text" class="form-control" name="modelsx"/>
 														<span class="help-block">
                                                         请输入模块顺序 </span>
                                         </div>
@@ -335,76 +334,25 @@
                                     <h3 class="block">请选择组件ID</h3>
 
                                     <div class="form-group">
-                                        <label class="control-label col-md-3">组件ID <span class="required">
-													* </span>
-                                        </label>
-
-                                        <div class="col-md-4">
-                                            <div class="select2-container select2-container-multi form-control select2"
-                                                 id="s2id_select2_sample2">
-                                                <ul class="select2-choices">
-                                                    <li class="select2-search-choice ms-hover">
-                                                        <div>New York Giants</div>
-                                                        <a tabindex="-1" class="select2-search-choice-close"
-                                                           href="#"></a></li>
-                                                    <li class="select2-search-field ms-hover"><label
-                                                            class="select2-offscreen" for="s2id_autogen27"></label>
-                                                        <input type="text" class="select2-input" spellcheck="false"
-                                                               autocapitalize="off" autocorrect="off" autocomplete="off"
-                                                               id="s2id_autogen27" style="width: 20px;" placeholder=""
-                                                               aria-activedescendant="select2-result-label-119"></li>
-                                                </ul>
-                                            </div>
-                                            <select multiple="" class="form-control select2 select2-offscreen"
-                                                    id="select2_sample2" tabindex="-1">
-                                                <optgroup label="NFC EAST">
-                                                    <option>Dallas Cowboys</option>
-                                                    <option>New York Giants</option>
-                                                    <option>Philadelphia Eagles</option>
-                                                    <option>Washington Redskins</option>
-                                                </optgroup>
-                                                <optgroup label="NFC NORTH">
-                                                    <option>Chicago Bears</option>
-                                                    <option>Detroit Lions</option>
-                                                    <option>Green Bay Packers</option>
-                                                    <option>Minnesota Vikings</option>
-                                                </optgroup>
-                                                <optgroup label="NFC SOUTH">
-                                                    <option>Atlanta Falcons</option>
-                                                    <option>Carolina Panthers</option>
-                                                    <option>New Orleans Saints</option>
-                                                    <option>Tampa Bay Buccaneers</option>
-                                                </optgroup>
-                                                <optgroup label="NFC WEST">
-                                                    <option>Arizona Cardinals</option>
-                                                    <option>St. Louis Rams</option>
-                                                    <option>San Francisco 49ers</option>
-                                                    <option>Seattle Seahawks</option>
-                                                </optgroup>
-                                                <optgroup label="AFC EAST">
-                                                    <option>Buffalo Bills</option>
-                                                    <option>Miami Dolphins</option>
-                                                    <option>New England Patriots</option>
-                                                    <option>New York Jets</option>
-                                                </optgroup>
-                                                <optgroup label="AFC NORTH">
-                                                    <option>Baltimore Ravens</option>
-                                                    <option>Cincinnati Bengals</option>
-                                                    <option>Cleveland Browns</option>
-                                                    <option>Pittsburgh Steelers</option>
-                                                </optgroup>
-                                                <optgroup label="AFC SOUTH">
-                                                    <option>Houston Texans</option>
-                                                    <option>Indianapolis Colts</option>
-                                                    <option>Jacksonville Jaguars</option>
-                                                    <option>Tennessee Titans</option>
-                                                </optgroup>
-                                                <optgroup label="AFC WEST">
-                                                    <option>Denver Broncos</option>
-                                                    <option>Kansas City Chiefs</option>
-                                                    <option>Oakland Raiders</option>
-                                                    <option>San Diego Chargers</option>
-                                                </optgroup>
+                                        <label class="control-label col-md-3">组件列表</label>
+                                        <div class="col-md-9">
+                                            <select multiple="multiple" class="multi-select" id="modelzj" name="modelzj">
+                                                <option>Dallas Cowboys</option>
+                                                <option>New York Giants</option>
+                                                <option>Philadelphia Eagles</option>
+                                                <option>Washington Redskins</option>
+                                                <option>Chicago Bears</option>
+                                                <option>Detroit Lions</option>
+                                                <option>Green Bay Packers</option>
+                                                <option>Minnesota Vikings</option>
+                                                <option selected>Atlanta Falcons</option>
+                                                <option>Carolina Panthers</option>
+                                                <option>New Orleans Saints</option>
+                                                <option>Tampa Bay Buccaneers</option>
+                                                <option>Arizona Cardinals</option>
+                                                <option>St. Louis Rams</option>
+                                                <option>San Francisco 49ers</option>
+                                                <option>Seattle Seahawks</option>
                                             </select>
                                         </div>
                                     </div>
@@ -438,8 +386,6 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <h4 class="form-section">Profile</h4>
-
                                     <div class="form-group">
                                         <label class="control-label col-md-3">模块顺序:</label>
 
@@ -448,6 +394,7 @@
                                             </p>
                                         </div>
                                     </div>
+                                    <h4 class="form-section">Profile</h4>
                                     <div class="form-group">
                                         <label class="control-label col-md-3">模块图标:</label>
 
