push add for homer

--- a/public/views/sys-model/sys-addmodel.html
+++ b/public/views/sys-model/sys-addmodel.html
@@ -11,11 +11,11 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#sys_admin/sys_admin_users.php">模块管理</a>
+            <a href="#sys-model.html">模块管理</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#sys_admin/sys_admin_users.php">模块编辑</a>
+            <a href="#sys-addmodel.html">模块编辑</a>
         </li>
     </ul>
     <div class="page-toolbar">
