--- a/public/views/sys-model/sys-model.html
+++ b/public/views/sys-model/sys-model.html
@@ -11,7 +11,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#sys_admin/sys_admin_users.php">模块管理</a>
+            <a href="#sys-model.html">模块管理</a>
         </li>
     </ul>
     <div class="page-toolbar">
