--- a/public/views/sys-role/sys-role.html
+++ b/public/views/sys-role/sys-role.html
@@ -11,7 +11,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#sys_admin/sys_admin_users.php">用户管理</a>
+            <a href="#sys_role.php">角色管理</a>
         </li>
     </ul>
     <div class="page-toolbar">
