add dcmodels ,update sys-model,update routes

--- a/public/views/sys-model/sys-addmodel.html
+++ b/public/views/sys-model/sys-addmodel.html
@@ -453,7 +453,13 @@
                                           </select>
                                         </div>
                                         <div class="col-md-7">
-                                            <textarea class="form-control autosizeme" rows="10" placeholder="显示模块CSS/JS..."></textarea>
+                                            <textarea class="form-control autosizeme" name="modelcss" rows="6" placeholder="显示模块CSS..."></textarea>
+                                        </div>
+                                        <div class="col-md-7">
+                                            <textarea class="form-control autosizeme" name="modelscript" rows="6" placeholder="显示模块SCRIPT..."></textarea>
+                                        </div>
+                                        <div class="col-md-7">
+                                            <textarea class="form-control autosizeme" name="modelinitscript" rows="6" placeholder="显示模块INIT SCRIPT..."></textarea>
                                         </div>
                                     </div>
 
