--- a/public/views/sys-role/sys-role.html
+++ b/public/views/sys-role/sys-role.html
@@ -49,8 +49,8 @@
     <div class="portlet-body">
         <table>
             <tr>
-                <td>用户名 / 昵称 : &nbsp;</td>
-                <td><input type="text" class="form-control" placeholder="请输入用户名"></td>
+                <td>角色名 : &nbsp;</td>
+                <td><input type="text" class="form-control" placeholder="请输入角色名"></td>
                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button class="btn btn-default red-pink">
                     <i class="fa fa-search"></i> &nbsp;查询 </button>
@@ -60,186 +60,32 @@
     </div>
 </div>
 <!-- END start search CONTENT -->
-<div class="portlet box yellow">
-    <div class="portlet-title">
-        <div class="caption">
-            <i class="fa fa-user"></i>用户管理
+
+<div class="col-md-6">
+    <div class="portlet light bordered">
+        <div class="portlet-title">
+            <div class="caption">
+                <i class="fa fa-cogs font-green-sharp"></i>
+                <span class="caption-subject font-green-sharp bold uppercase">Checkable Tree</span>
+            </div>
+            <div class="tools">
+                <a href="javascript:;" class="reload">
+                </a>
+                <a href="javascript:;" class="collapse">
+                </a>
+            </div>
         </div>
-        <div class="tools">
-            <button id="dcmiss_editable_new" class="btn btn-default yellow">
-                <i class="fa fa-pencil"></i> &nbsp;添加 </button>
-            <a href="javascript:;" class="reload">
-            </a>
-            <a href="javascript:;" class="collapse">
-            </a>
+        <div class="portlet-body">
+            <div id="slide_tree" class="tree-demo">
+            </div>
         </div>
-    </div>
-    <div class="portlet-body">
-        <table class="table table-striped table-hover table-bordered" id="dcmiss_editable">
-            <thead>
-            <tr>
-                <th>
-                    用户名
-                </th>
-                <th>
-                    昵称
-                </th>
-                <th>
-                    密码
-                </th>
-                <th>
-                    角色
-                </th>
-                <th>
-                    Edit
-                </th>
-                <th>
-                    Delete
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>
-                    alex
-                </td>
-                <td>
-                    Alex Nilson
-                </td>
-                <td>
-                    1234
-                </td>
-                <td class="center">
-                    power user
-                </td>
-                <td>
-                    <a class="edit" href="javascript:;">
-                        Edit </a>
-                </td>
-                <td>
-                    <a class="delete" href="javascript:;">
-                        Delete </a>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    lisa
-                </td>
-                <td>
-                    Lisa Wong
-                </td>
-                <td>
-                    434
-                </td>
-                <td class="center">
-                    new user
-                </td>
-                <td>
-                    <a class="edit" href="javascript:;">
-                        Edit </a>
-                </td>
-                <td>
-                    <a class="delete" href="javascript:;">
-                        Delete </a>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    nick12
-                </td>
-                <td>
-                    Nick Roberts
-                </td>
-                <td>
-                    232
-                </td>
-                <td class="center">
-                    power user
-                </td>
-                <td>
-                    <a class="edit" href="javascript:;">
-                        Edit </a>
-                </td>
-                <td>
-                    <a class="delete" href="javascript:;">
-                        Delete </a>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    goldweb
-                </td>
-                <td>
-                    Sergio Jackson
-                </td>
-                <td>
-                    132
-                </td>
-                <td class="center">
-                    elite user
-                </td>
-                <td>
-                    <a class="edit" href="javascript:;">
-                        Edit </a>
-                </td>
-                <td>
-                    <a class="delete" href="javascript:;">
-                        Delete </a>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    webriver
-                </td>
-                <td>
-                    Antonio Sanches
-                </td>
-                <td>
-                    462
-                </td>
-                <td class="center">
-                    new user
-                </td>
-                <td>
-                    <a class="edit" href="javascript:;">
-                        Edit </a>
-                </td>
-                <td>
-                    <a class="delete" href="javascript:;">
-                        Delete </a>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    gist124
-                </td>
-                <td>
-                    Nick Roberts
-                </td>
-                <td>
-                    62
-                </td>
-                <td class="center">
-                    new user
-                </td>
-                <td>
-                    <a class="edit" href="javascript:;">
-                        Edit </a>
-                </td>
-                <td>
-                    <a class="delete" href="javascript:;">
-                        Delete </a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
     </div>
 </div>
 
 
 <!-- END MAIN CONTENT -->
 <!-- BEGIN MAIN JS & CSS -->
-<script language="JavaScript" type="text/javascript">
-    TableEditable.init();
+<script>
+    UITree.init(); // init todo page
 </script>
 <!-- BEGIN MAIN JS & CSS -->
