--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -125,7 +125,7 @@
                     ...
                 </td>
                 <td>
-                    <a class="edit" href="javascript:;">
+                    <a class="edit" href="javascript:;" ng-click="clickToEdit(user.email)">
                         Edit </a>
                 </td>
                 <td>
