--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -125,11 +125,11 @@
                     ...
                 </td>
                 <td>
-                    <a class="edit" href="javascript:;">
+                    <a class="edit" ng-click="edituser(user.id)"  href="javascript:;">
                         Edit </a>
                 </td>
                 <td>
-                    <a class="delete" href="javascript:;">
+                    <a class="delete" ng-click="deluser(user)" confirmation-needed="真的要删除哇？"  href="javascript:;">
                         Delete </a>
                 </td>
             </tr>
@@ -141,7 +141,7 @@
             </tbody>
             <tfoot>
             <tr>
-                <td colspan="7"  st-pagination st-items-by-page="4" class="text-center">
+                <td colspan="7"  st-pagination st-items-by-page="itemsByPage" class="text-center">
                 </td>
             </tr>
             </tfoot>
